--- a/estudos-python/.vscode/settings.json
+++ b/estudos-python/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "editor.renderWhitespace": "all"
+}{
     "python-envs.defaultEnvManager": "ms-python.python:system",
     "python-envs.pythonProjects": []
 }
